# CalvisionDaq

./: .gitignore  CMakeLists.txt  README.md
_unused/: dt5742test.cc
_unused/daq/: Makefile  daq  daq2  readout
_unused/daq/source/: CaenError.h  DT5742.cxx  DT5742.h  calib.cpp  daq.cc  readout.cpp
_unused/data_reader/: DRSGroupData.h  Makefile  main_reader.cxx  plot_channels.C  test
analysis/: CamelFitter.h  DESY_HG_LG.C  DESY_SPR.C  JLABtest.py  PulseFitter.h  analysis.C  check_times.C  compress_root_files.C  df_analysis.C  jlab_analyzer.C
cmake/: FindCaenDigitizer.cmake  MakeCalvisionDaqLibrary.cmake
daq/: Makefile  input.txt
daq/source/: DT5742.cxx  DT5742.h  calib.cpp  daq.cpp
data/: config_file.txt  config_file_1.txt  config_file_2.txt
data_reader/: DRSGroupData.cxx  DRSGroupData.h  Makefile  bitmanip.h  common.h  main_reader.cxx  plot_channels.C  x742RawReader.cxx  x742RawReader.h
direct_readout/: .gitignore  BufferedFileIO.cpp  BufferedFileIO.h  CaenEnums.cpp  CaenEnums.h  Calibration.h  Digitizer.cpp  Digitizer.h  Makefile  RootIO.h  X742CorrectionRoutines.c  X742_Data.cpp  X742_Data.h  async_input.h  calibrate.cpp  decoder.cpp  direct_readout.cpp  file.root  main.cpp  new_plot.C  plot_channels.C  test_main.cpp
include/: CaenError.h  backup.calibration.h  binary_io.h  bitmanip.h  calibration.h  name_conventions.h
src/CalvisionDaq/: CMakeLists.txt
src/CalvisionDaq/common/: BinaryIO.h  Bitmanip.cpp  Bitmanip.h  BufferedFileIO.cpp  BufferedFileIO.h  CMakeLists.txt  Forward.h  MemoryPool.h  NameConventions.h  Stopwatch.h
src/CalvisionDaq/digitizer/: .Calibration.cpp.swp  .X742_Data.cpp.swp  CMakeLists.txt  CaenEnums.cpp  CaenEnums.h  CaenError.cpp  CaenError.h  Calibration.cpp  Calibration.h  Command.cpp  Command.h  Decoder.cpp  Decoder.h  Digitizer.cpp  Digitizer.h  Frequency.h  Staging.cpp  Staging.h  X742CorrectionRoutines.cpp  X742DecodeRoutines.cpp  X742DecodeRoutines.h  X742_Data.cpp  X742_Data.h
src/CalvisionDaq/exec/: CMakeLists.txt  calibrate.cpp  check_timing.cpp  decoder.cpp  dual_readout.cpp  optical_test.cpp  read_and_decode.cpp  readout.cpp  reset_digitizer.cpp  serial_dual_readout.cpp  test.cpp
src/CalvisionDaq/root/: CMakeLists.txt  RootIO.cpp  RootIO.h  Sampler.cpp  Sampler.h
